# pyvoltic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RESOURCES.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pytest-pre-commit-action.yml  pytest.yml
docs/: 01_run_model.ipynb  02_run_mode_custom_pgf.ipynb  03_comparing_incidence.ipynb  03_tutorial_on_SR_NE_model.ipynb  04_tutorial_on_SR_NE_model.ipynb
examples/: 03_comparing_incidence.ipynb  04_tutorial_on_SR_NE_model.ipynb
pyvoltic/: __init__.py
pyvoltic/classes/: __init__.py  _sim_results.py  _volz_framework.py
pyvoltic/models/: __init__.py  _classic_models.py  _ebcm.py  _ext_models.py
pyvoltic/probability_generating_functions/: __init__.py  _poisson_pgf.py  _powerlaw_pgf.py  _probability_generating_function.py  poisson_pgf.py  probability_generating_function.py
pyvoltic/results/: __init__.py  _simulation_results.py
pyvoltic/vizualisations/: __init__.py  _viz_functions.py
tests/: test_pyvoltic.py
