[build-system]
requires = ["setuptools","Cython", "wheel", "numpy","scipy", "matplotlib", "networkx" ]
build-backend = "setuptools.build_meta"

[tool.ruff]
# pycodestyle ('E') and Pyflakes ('F') and import sort ('I')
select = [ "E", "F", "I"]
ignore = [ "E501", # ignore line length
           "E741" # ambiguous variable name
            ]

target-version = "py37"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
