[metadata]
name = pyvoltic
version = attr: pyvoltic.0.01
author = Leo Loman
author_email = leo.loman@gmail.com
description = A framework for the Edge Based Compartmental Model (Volz Miller) equations
long_description= file: README.md
keywords = ebcm, edge based compartmental model
license = MIT
classifiers = 
    Programming Langugae :: Python :: 3
    
[options]
zip_safe = False
include_package_data = False
package_dir = pyvoltic
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    scipy
    networkx
    matplotlib
    
[options.package_data]


[options.extras_require]
abc = pyabc

[options.packages.find]
where = pyvoltic
exclude = 
    docs*
    tests*