[metadata]
name = pyvoltic
version = attr: pyvoltic.version.__version__
author = Leo Loman
author_email = leo.loman@outlook.com
description = A framework for the Edge Based Compartmental Model (Volz Miller) equations
long_description= file: README.md
keywords = ebcm, edge based compartmental model
project_urls =
    Bug Tracker = https://github.com/leoloman/pyvoltic/issues
    repository = https://github.com/leoloman/pyvoltic
license = MIT
classifiers = 
    Programming Langugae :: Python :: 3
    Operating System :: OS Independent
    
[options]
zip_safe = False
include_package_data = False
package_dir = 
    =pyvoltic
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    networkx
    matplotlib

[options.packages.find]
where = pyvoltic
exclude = 
    docs*
    tests*
    .git,
    .github,
    __pycache__,
    dist,
    build